automatically backed up by learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -4,6 +4,6 @@
   <label>Name: <input id="name" type="text" name="name"></label><br>
   <label>Email: <input id="email" type="text" name="email"></label><br>
   <label>Password: <input id="password" type="text" name="password"></label><br>
-  <input id="submit" type="submit" name="submit" value="Submit">
+  <input id="submit" type="submit" name="submit" value="Sign Up">
 
 </form>
